2009-11-10  Shai Ayal  <shaiay@users.sourceforge.net>

	* gl2ps-renderer.cc, gl2ps-renderer.h, gl2ps.c, gl2ps.h:
	New files.  PostScript backend based on opengl_renderer and gl2ps.
	* Makefile.am (octinclude_HEADERS): Add gl2ps.h to the list.
	(DIST_SRC): Add gl2ps.c to the list.
	* gl-render.cc (opengl_renderer::render_text): Rename from
	opengl_renderer::draw_text.
	(opengl_renderer::draw_figure, opengl_renderer::draw_axes,
	opengl_renderer::draw_line, opengl_renderer::draw_surface,
	opengl_renderer::draw_patch, opengl_renderer::draw_hggroup,
	opengl_renderer::draw_text, opengl_renderer::draw_image):
	Rename from overloaded opengl_renderer::draw.
	* gl-render.h: Fix decls.

	* DLD-FUNCTIONS/fltk_backend.cc	(OpenGL_fltk::print): New function.
	(OpenGL_fltk::print_filename): New data member.
	(OpenGL_fltk::draw): Add support for printing.
	(fltk_backend::print_figure): Call figure_manager::print.

2009-11-10  John W. Eaton  <jwe@octave.org>

	* file-io.cc (Fferror): Update doc string.

2009-11-10  David Grundberg  <davidg@cs.umu.se>

	* oct-strstrm.h (octave_base_strstream::tell): Declare virtual.
	(octave_istrstream::tell): New method.

2009-11-10  John W. Eaton  <jwe@octave.org>
	* Makefile.am, OPERATORS/module.mk, TEMPLATE-INST/module.mk,
	find-defun-files.sh, version.h.in,
	DLD-FUNCTIONS/config-module.awk, DLD-FUNCTIONS/config-module.sh,
	DLD-FUNCTIONS/module-files: New files.
	* Makefile.in, version.h: Delete.
	* lex.ll: Rename from lex.l.  Include oct-parse.h instead of
	y.tab.h.
	* parse.yy: Rename from parse.y
	* mkbuiltins, mkgendoc: Don't require filenames to start with a
	"." at beginning of line.

	* oct-conf.h.in (OCTAVE_CONF_LAPACK_LIBS): Delete macro.
	* toplev.cc (octave_config_info): Don't include LAPACK_LIBS in the
	struct.

2009-11-10  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.cc (octave_class::numel): Use base version if called from
	built-in assignment.
	(octave_class::size): Ditto.

2009-11-10  Jaroslav Hajek  <highegg@gmail.com>
